<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dog2"
    tools:context=".LoginUI"
    >



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-23dp"
        android:fontFamily="@font/brandon_blk"
        android:text="@string/RecycleSG"
        android:textSize="30sp" />

    <ProgressBar
        android:id="@+id/loading_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="E-Mail"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loading_progressBar"
        android:layout_marginTop="0dp"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="38dp"
        android:layout_height="37dp"
        app:srcCompat="@drawable/ic_person_black_24dp"
        android:layout_toLeftOf="@id/email_editText"
        android:layout_below="@id/loading_progressBar"
        android:layout_marginTop="9dp"/>

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email_editText"
        android:layout_marginTop="8dp" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@id/password_editText"
        android:layout_below="@id/imageView4"
        app:srcCompat="@drawable/ic_lock_black_24dp" />


    <Button
        android:id="@+id/signin_btn"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="@font/brandon_reg"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password_editText"/>


    <Button
        android:id="@+id/register_btn"
        android:layout_width="151dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/brandon_reg"
        android:text="New User? Register"
        android:textColor="#000000"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signin_btn"/>


</RelativeLayout>